--- a/src/components/styles/common.scss
+++ b/src/components/styles/common.scss
@@ -8,8 +8,44 @@ body{
         grid-template-columns: 200px 1fr;
     }
 }
+.form-control{
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    box-sizing: border-box;
+}
 
 .awesome-icon{
     width: 15px !important;
     height: 15px !important;
 }
+
+.modal-container{
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    display:grid;
+    align-content:center;
+    justify-content:center;
+    grid-template-rows: 1fr 1fr 1fr;
+    background: #d3d3d38f;
+    .modal-inner{
+        position:relative;
+        background: white;
+        padding: 10px;
+        border-radius: 5px;
+        box-sizing: border-box;
+        box-shadow: rgba(0,0,0,0.2) 0px 2px 1px -1px, rgba(0,0,0,.14) 0px 1px 1px 0px, rgba(92,57,57,0.12) 0px 1px 3px 0px;
+    }
+}
+    
