adding more to it

--- a/src/components/styles/common.scss
+++ b/src/components/styles/common.scss
@@ -48,4 +48,15 @@ body{
         box-shadow: rgba(0,0,0,0.2) 0px 2px 1px -1px, rgba(0,0,0,.14) 0px 1px 1px 0px, rgba(92,57,57,0.12) 0px 1px 3px 0px;
     }
 }
-    
+
+hr{
+    margin: 0;
+    height: 0;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    border-width: 0;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.12);
+    border-bottom-width: thin;
+}
