working on tags

--- a/src/components/styles/common.scss
+++ b/src/components/styles/common.scss
@@ -62,6 +62,10 @@ hr{
     border-bottom-width: thin;
 }
 
+button{
+    height: 23px;
+}
+
 span.txt{
     font-family: 'Roboto';
     font-size: 13px;
